--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/ic_bk_app"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BkApp">
+        android:theme="@style/Theme.BkApp"
+        >
         <activity
             android:name=".ui.activities.MainActivity"
             android:screenOrientation="portrait">
